--- a/config.env
+++ b/config.env
@@ -35,7 +35,7 @@ CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 # KernelSU flags
 ENABLE_KERNELSU=true
-KERNELSU_TAG=main
+KERNELSU_TAG=v0.9.2
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
 
@@ -61,4 +61,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://www.dooper.top/boot.img
+SOURCE_BOOT_IMAGE=https://github.com/6get-xiaofan/KernelSU_Action/releases/download/1.0/boot.img
